Dashboard detail: add Facility, Ownership & Organization, and Management Contracts summary cards for Hospital to match 2022 profile; render above charts.

--- a/web/index.html
+++ b/web/index.html
@@ -51,6 +51,7 @@
     <section class="detail" id="detail" hidden>
       <button class="close" id="close">×</button>
       <div id="meta"></div>
+      <div id="summary"></div>
       <div class="links" style="margin:6px 0 10px 0">
         <label style="display:inline-flex;align-items:center;gap:6px;font-size:0.95em">
           <input type="checkbox" id="showAllFields" /> Show all fields (include empty optionals)
