Fullscreen toolbar: add fixed header with HTML/PDF links, Download CSV, Share, Print, Exit; add print stylesheet to optimize printing the full-screen profile.

--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,7 @@
     </section>
     <section class="detail" id="detail" hidden>
       <button class="close" id="close">×</button>
+      <div id="fsbar" class="fsbar" hidden></div>
       <div id="meta"></div>
       <div id="summary"></div>
       <div class="links" style="margin:6px 0 10px 0">
