--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HFSRB Facility Dashboard</title>
-  <link rel="stylesheet" href="styles.css?v=6">
+  <link rel="stylesheet" href="styles.css?v=7">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
@@ -41,6 +41,7 @@
       </label>
       <div class="links" style="margin-top:8px">
         <button id="exportFiltered">Export Filtered CSV</button>
+        <button id="resetFilters">Reset Filters</button>
         <a href="summary.html">Summary</a>
       </div>
       <div class="stats" id="stats"></div>
@@ -72,7 +73,7 @@
     </section>
   </main>
 
-  <script src="app.js?v=8"></script>
+  <script src="app.js?v=9"></script>
   <footer>
     <small>Source: HFSRB Annual Facility Survey</small>
   </footer>
