--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='10' fill='%230a58ca'/%3E%3Ctext x='50%' y='54%' font-size='34' text-anchor='middle' fill='white' font-family='Arial, sans-serif'%3EH%3C/text%3E%3C/svg%3E">
   <title>HFSRB Facility Dashboard</title>
   <link rel="stylesheet" href="styles.css?v=7">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
@@ -78,7 +79,7 @@
 
   <script src="app.js?v=9"></script>
   <footer>
-    <small>Source: HFSRB Annual Facility Survey</small>
+    <small>Source: HFSRB Annual Facility Survey • <span id="buildInfo">Build v9</span></small>
   </footer>
 </body>
 </html>
