--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <header>
-    <h1>HFSRB Facility Dashboard <span id="appVersion" class="version-badge">v10</span></h1>
+    <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
+      <h1>HFSRB Facility Dashboard <span id="appVersion" class="version-badge">v10</span></h1>
+      <a href="welcome.html" class="links" style="text-decoration:none"><button>Start Wizard</button></a>
+    </div>
     <div class="sub">Explore facilities by year and type; click a facility for details.</div>
   </header>
   <main>
