--- a/web/welcome.html
+++ b/web/welcome.html
@@ -50,7 +50,7 @@
     </div>
     <div class="cta">
       <button class="btn" id="openBtn" disabled>Open Profile</button>
-      <a class="btn" href="index.html">Advanced Dashboard</a>
+      <a class="btn" href="dashboard.html">Advanced Dashboard</a>
     </div>
   </main>
 
