Brand update: set accent to #28658D and use Aptos font across site; lighten wizard visuals and controls

--- a/web/query.html
+++ b/web/query.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Query Assistant</title>
   <style>
-    :root { --bg:#f7f9fc; --fg:#0b1220; --muted:#5f6b7a; --border:#e5eaf1; --accent:#0a58ca; }
-    body { margin:0; background:var(--bg); color:var(--fg); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
+    :root { --bg:#f7f9fc; --fg:#0b1220; --muted:#5f6b7a; --border:#e5eaf1; --accent:#28658D; }
+    body { margin:0; background:var(--bg); color:var(--fg); font-family: Aptos, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; }
     header { padding: 14px 16px; border-bottom: 1px solid var(--border); display:flex; align-items:center; justify-content:space-between; }
     main { padding: 16px; max-width: 1000px; margin: 0 auto; }
     .box { border:1px solid var(--border); border-radius:12px; background:#fff; padding:12px 14px; display:flex; gap:10px; align-items:center; }
