--- a/web/welcome.html
+++ b/web/welcome.html
@@ -5,20 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HFSRB Survey | Welcome</title>
   <style>
-    :root { --bg:#0b1020; --card:#11162a; --fg:#e7eaf1; --muted:#98a2b3; --accent:#6ea8fe; --border:#263148; }
+    :root { --bg:#f7f9fc; --card:#ffffff; --fg:#0b1220; --muted:#5f6b7a; --accent:#28658D; --border:#e5eaf1; }
     * { box-sizing: border-box; }
     html, body { height: 100%; }
-    body { margin:0; background: radial-gradient(1200px 600px at 50% -10%, #1a2240 0%, #0b1020 60%); color: var(--fg); font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; display:grid; place-items:center; }
-    .wrap { width: min(800px, 92vw); padding: 28px; border: 1px solid var(--border); border-radius: 16px; background: rgba(17,22,42,0.82); backdrop-filter: blur(4px); box-shadow: 0 10px 30px rgba(0,0,0,0.35); }
+    body { margin:0; background: radial-gradient(1000px 400px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); font-family: Aptos, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; display:grid; place-items:center; }
+    .wrap { width: min(900px, 92vw); padding: 28px; border: 1px solid var(--border); border-radius: 16px; background: var(--card); box-shadow: 0 8px 24px rgba(16,24,40,0.08); }
     h1 { margin: 0 0 6px; font-size: 24px; letter-spacing: 0.3px; }
     p.sub { margin: 0 0 18px; color: var(--muted); }
     .row { display:flex; gap:14px; flex-wrap:wrap; margin: 8px 0; align-items: center; }
     label { font-size: 13px; color: var(--muted); }
-    select { appearance: none; -webkit-appearance:none; -moz-appearance:none; width: 100%; max-width: 300px; padding: 10px 12px; border-radius: 10px; border: 1px solid var(--border); background: #0e1530; color: var(--fg); font-size: 14px; box-shadow: inset 0 0 0 1px rgba(255,255,255,0.03); }
+    select { appearance: none; -webkit-appearance:none; -moz-appearance:none; width: 100%; max-width: 420px; padding: 10px 12px; border-radius: 10px; border: 1px solid var(--border); background: #fafcff; color: var(--fg); font-size: 14px; box-shadow: inset 0 0 0 1px rgba(40,101,141,0.05); }
     .step { display:flex; flex-direction:column; gap:6px; }
     .step.hidden { display:none; }
     .cta { margin-top: 18px; display:flex; gap:10px; }
-    .btn { padding: 10px 14px; border-radius: 10px; border: 1px solid var(--border); background: linear-gradient(180deg, #1b2550, #121a3a); color: #eaf2ff; cursor: pointer; font-weight: 600; letter-spacing: .2px; }
+    .btn { padding: 10px 14px; border-radius: 10px; border: 1px solid var(--border); background: linear-gradient(180deg, #ffffff, #f5f8ff); color: #0b1220; cursor: pointer; font-weight: 600; letter-spacing: .2px; }
     .btn:disabled { opacity: .5; cursor: not-allowed; }
     .hint { font-size: 12px; color: var(--muted); margin-top: 6px; }
   </style>
@@ -26,7 +26,7 @@
 <body>
   <main class="wrap">
     <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <h1 style="display:flex;align-items:center;gap:10px"><span style="display:inline-block;padding:4px 10px;border:1px solid var(--border);border-radius:999px;background:#0e1530;color:#c9d5ff;font-size:12px;letter-spacing:.4px">HFSRB</span> Explore Illinois Facility Survey</h1>
+      <h1 style="display:flex;align-items:center;gap:10px"><span style="display:inline-block;padding:4px 10px;border:1px solid var(--border);border-radius:999px;background:#eef5ff;color:#28658D;font-size:12px;letter-spacing:.4px">HFSRB</span> Explore Illinois Facility Survey</h1>
       <span style="font-size:12px;color:var(--muted)">v10</span>
     </div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
@@ -47,7 +47,7 @@
       </div>
       <div class="step hidden" id="step-fac" style="flex:1; min-width:320px">
         <label for="facility">Facility</label>
-        <input id="facFilter" type="text" placeholder="Type to filter facilities…" style="padding:10px 12px;border-radius:10px;border:1px solid var(--border);background:#0e1530;color:var(--fg);font-size:14px">
+        <input id="facFilter" type="text" placeholder="Type to filter facilities…" style="padding:10px 12px;border-radius:10px;border:1px solid var(--border);background:#fafcff;color:var(--fg);font-size:14px">
         <select id="facility"></select>
         <div class="hint" id="facCount"></div>
       </div>
