Brand stylesheet: add brand.css (Aptos @font-face placeholders, #28658D accent); include in wizard, dashboard, and profiles

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='10' fill='%230a58ca'/%3E%3Ctext x='50%' y='54%' font-size='34' text-anchor='middle' fill='white' font-family='Arial, sans-serif'%3EH%3C/text%3E%3C/svg%3E">
   <title>HFSRB Facility Dashboard</title>
+  <link rel="stylesheet" href="brand.css">
   <link rel="stylesheet" href="styles.css?v=7">
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
