--- a/web/welcome.html
+++ b/web/welcome.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HFSRB Survey | Welcome</title>
+  <link rel="stylesheet" href="brand.css">
   <style>
     :root { --bg:#f7f9fc; --card:#ffffff; --fg:#0b1220; --muted:#5f6b7a; --accent:#28658D; --border:#e5eaf1; }
     * { box-sizing: border-box; }
     html, body { height: 100%; }
-    body { margin:0; background: radial-gradient(1000px 400px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); font-family: Aptos, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; display:grid; place-items:center; }
+    body { margin:0; background: radial-gradient(1000px 400px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); display:grid; place-items:center; }
     .wrap { width: min(900px, 92vw); padding: 28px; border: 1px solid var(--border); border-radius: 16px; background: var(--card); box-shadow: 0 8px 24px rgba(16,24,40,0.08); }
     h1 { margin: 0 0 6px; font-size: 24px; letter-spacing: 0.3px; }
     p.sub { margin: 0 0 18px; color: var(--muted); }
