Brand logo: show HFSRB logo in wizard, dashboard, and profiles (expects web/assets/hfsrb-logo.png); add brand.css helpers

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <h1>HFSRB Facility Dashboard <span id="appVersion" class="version-badge">v10</span></h1>
+      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" alt="HFSRB logo"> HFSRB Facility Dashboard <span id="appVersion" class="version-badge">v10</span></h1>
       <a href="welcome.html" class="links" style="text-decoration:none"><button>Start Wizard</button></a>
     </div>
     <div class="sub">Explore facilities by year and type; click a facility for details.</div>
