--- a/web/welcome.html
+++ b/web/welcome.html
@@ -27,7 +27,7 @@
 <body>
   <main class="wrap">
     <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <h1 style="display:flex;align-items:center;gap:10px"><span style="display:inline-block;padding:4px 10px;border:1px solid var(--border);border-radius:999px;background:#eef5ff;color:#28658D;font-size:12px;letter-spacing:.4px">HFSRB</span> Explore Illinois Facility Survey</h1>
+      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" alt="HFSRB logo"> Explore Illinois Facility Survey</h1>
       <span style="font-size:12px;color:var(--muted)">v10</span>
     </div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
