Logo fallback: hide image if missing so layouts don’t break

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -27,7 +27,7 @@
 <body>
   <main class="wrap">
     <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" alt="HFSRB logo"> Explore Illinois Facility Survey</h1>
+      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" alt="HFSRB logo" onerror="this.style.display='none'"> Explore Illinois Facility Survey</h1>
       <span style="font-size:12px;color:var(--muted)">v10</span>
     </div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
