--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="assets/hfsrb-logo.png">
+  <link rel="apple-touch-icon" href="assets/hfsrb-logo.png">
+  <meta property="og:title" content="HFSRB Facility Dashboard">
+  <meta property="og:description" content="Explore and filter Illinois facility data.">
+  <meta property="og:image" content="assets/hfsrb-logo.png">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect width='64' height='64' rx='10' fill='%230a58ca'/%3E%3Ctext x='50%' y='54%' font-size='34' text-anchor='middle' fill='white' font-family='Arial, sans-serif'%3EH%3C/text%3E%3C/svg%3E">
   <title>HFSRB Facility Dashboard</title>
   <link rel="stylesheet" href="brand.css">
