--- a/web/welcome.html
+++ b/web/welcome.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="assets/hfsrb-logo.png">
+  <link rel="apple-touch-icon" href="assets/hfsrb-logo.png">
+  <meta property="og:title" content="HFSRB Facility Survey">
+  <meta property="og:description" content="Explore Illinois facility profiles by type and year.">
+  <meta property="og:image" content="assets/hfsrb-logo.png">
+  <meta name="twitter:card" content="summary_large_image">
   <title>HFSRB Survey | Welcome</title>
   <link rel="stylesheet" href="brand.css">
   <style>
