Wizard chips: clear Type/Year/Filter inline; add retina logo srcset + SVG fallback; shared chip styles in brand.css; favicon/OG already added

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" alt="HFSRB logo" onerror="this.style.display='none'"> HFSRB Facility Dashboard <span id="appVersion" class="version-badge">v10</span></h1>
+      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" srcset="assets/hfsrb-logo.png 1x, assets/hfsrb-logo@2x.png 2x" alt="HFSRB logo" onerror="this.onerror=null;this.src='assets/hfsrb-logo.svg';"> HFSRB Facility Dashboard <span id="appVersion" class="version-badge">v10</span></h1>
       <a href="welcome.html" class="links" style="text-decoration:none"><button>Start Wizard</button></a>
     </div>
     <div class="sub">Explore facilities by year and type; click a facility for details.</div>
