--- a/web/welcome.html
+++ b/web/welcome.html
@@ -33,9 +33,13 @@
 <body>
   <main class="wrap">
     <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" alt="HFSRB logo" onerror="this.style.display='none'"> Explore Illinois Facility Survey</h1>
+      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" srcset="assets/hfsrb-logo.png 1x, assets/hfsrb-logo@2x.png 2x" alt="HFSRB logo" onerror="this.onerror=null;this.src='assets/hfsrb-logo.svg';"> Explore Illinois Facility Survey</h1>
       <span style="font-size:12px;color:var(--muted)">v10</span>
     </div>
+    <div id="chips" class="chips"></div>
+      <span style="font-size:12px;color:var(--muted)">v10</span>
+    </div>
+    <div id="chips" class="chips"></div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
     <div class="row">
       <div class="step" style="min-width:260px">
@@ -107,6 +111,22 @@
       ysel.innerHTML = '<option value="" disabled selected>Select a year…</option>' + years.map(y=>`<option>${y}</option>`).join('');
       stp.classList.toggle('hidden', years.length===0);
     }
+    
+    function updateChips(){
+      const box = el('#chips'); if (!box) return;
+      const parts = [];
+      if (state.choices.type) parts.push(`<span class="chip" data-k="type">Type: ${state.choices.type} ×</span>`);
+      if (state.choices.year) parts.push(`<span class="chip" data-k="year">Year: ${state.choices.year} ×</span>`);
+      if (state.facFilter) parts.push(`<span class="chip" data-k="filter">Filter: ${state.facFilter} ×</span>`);
+      box.innerHTML = parts.join(' ');
+      box.querySelectorAll('.chip').forEach(ch => ch.addEventListener('click', () => {
+        const k = ch.getAttribute('data-k');
+        if (k==='type'){ state.choices.type=''; const ts=el('#type'); if(ts) ts.value=''; setYears(); state.choices.year=''; const ys=el('#year'); if(ys) ys.innerHTML=''; }
+        if (k==='year'){ state.choices.year=''; const ys=el('#year'); if(ys) ys.value=''; }
+        if (k==='filter'){ state.facFilter=''; const fi = el('#facFilter'); if (fi) fi.value=''; }
+        setFacilities(); el('#openBtn').disabled = true;
+      }));
+    }
     function setFacilities() {
       const fes = el('#facility'); const stp = el('#step-fac'); const cnt = el('#facCount'); const filt = (state.facFilter||'').toLowerCase();
       let rows = state.all.filter(r => (!state.choices.type || r.type===state.choices.type) && (!state.choices.year || String(r.year)===String(state.choices.year)));
@@ -115,6 +135,7 @@
       fes.innerHTML = '<option value="" disabled selected>Select a facility…</option>' + opts;
       stp.classList.toggle('hidden', rows.length===0);
       cnt.textContent = rows.length ? `${rows.length} facilities${filt?` • filtered by “${state.facFilter}”`:''}` : (filt ? 'No matches' : '');
+      updateChips();
     }
     function openProfile() {
       const { type, year, slug } = state.choices;
@@ -128,9 +149,9 @@
       state.all = await api.loadIndex();
       // Wire selects
       const tSel = el('#type'); const ySel = el('#year'); const fInp = el('#facFilter'); const fSel = el('#facility');
-      tSel.addEventListener('change', (e)=>{ state.choices.type = e.target.value; setYears(); el('#openBtn').disabled = true; ySel.focus(); });
-      ySel.addEventListener('change', (e)=>{ state.choices.year = e.target.value; setFacilities(); el('#openBtn').disabled = true; fInp.focus(); });
-      fInp.addEventListener('input', (e)=>{ state.facFilter = e.target.value; setFacilities(); el('#openBtn').disabled = true; });
+      tSel.addEventListener('change', (e)=>{ state.choices.type = e.target.value; setYears(); el('#openBtn').disabled = true; ySel.focus(); updateChips(); });
+      ySel.addEventListener('change', (e)=>{ state.choices.year = e.target.value; setFacilities(); el('#openBtn').disabled = true; fInp.focus(); updateChips(); });
+      fInp.addEventListener('input', (e)=>{ state.facFilter = e.target.value; setFacilities(); el('#openBtn').disabled = true; updateChips(); });
       fSel.addEventListener('change', (e)=>{ state.choices.slug = e.target.value; el('#openBtn').disabled = !(state.choices.slug); });
       el('#openBtn').addEventListener('click', openProfile);
       // Keyboard: Enter to advance or open
