Dashboard: add filter chips to clear Year/Type/County/Region/Search; Wizard: inline chips + retina logo and SVG fallback; brand chip styles

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -57,6 +57,7 @@
       <label style="display:inline-flex;align-items:center;gap:6px;margin-top:6px">
         <input type="checkbox" id="toggleDebug" /> Debug events
       </label>
+      <div id="filterChips" class="chips"></div>
       <div class="stats" id="stats"></div>
     </aside>
     <section class="results">
