Dashboard: show result count near filter chips; Index: add or_cases_class_b/class_c metrics

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -58,6 +58,7 @@
         <input type="checkbox" id="toggleDebug" /> Debug events
       </label>
       <div id="filterChips" class="chips"></div>
+      <div id="resultCount" style="margin-top:6px;color:#5f6b7a"></div>
       <div class="stats" id="stats"></div>
     </aside>
     <section class="results">
