--- a/web/welcome.html
+++ b/web/welcome.html
@@ -15,34 +15,35 @@
     :root { --bg:#f7f9fc; --card:#ffffff; --fg:#0b1220; --muted:#5f6b7a; --accent:#28658D; --border:#e5eaf1; }
     * { box-sizing: border-box; }
     html, body { height: 100%; }
-    body { margin:0; background: radial-gradient(1000px 400px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); display:grid; place-items:center; }
-    .wrap { width: min(900px, 92vw); padding: 28px; border: 1px solid var(--border); border-radius: 16px; background: var(--card); box-shadow: 0 8px 24px rgba(16,24,40,0.08); }
-    h1 { margin: 0 0 6px; font-size: 24px; letter-spacing: 0.3px; }
-    p.sub { margin: 0 0 18px; color: var(--muted); }
-    .row { display:flex; gap:14px; flex-wrap:wrap; margin: 8px 0; align-items: center; }
-    label { font-size: 13px; color: var(--muted); }
-    select { appearance: none; -webkit-appearance:none; -moz-appearance:none; width: 100%; max-width: 420px; padding: 10px 12px; border-radius: 10px; border: 1px solid var(--border); background: #fafcff; color: var(--fg); font-size: 14px; box-shadow: inset 0 0 0 1px rgba(40,101,141,0.05); }
-    .step { display:flex; flex-direction:column; gap:6px; }
-    .step.hidden { display:none; }
-    .cta { margin-top: 18px; display:flex; gap:10px; }
+    body { margin:0; background: radial-gradient(900px 360px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); display:grid; place-items:center; }
+    .wrap { width: min(920px, 92vw); padding: 28px; border: 1px solid var(--border); border-radius: 16px; background: var(--card); box-shadow: 0 8px 24px rgba(16,24,40,0.08); }
+    .head { display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom: 6px; }
+    h1 { margin: 0; font-size: 22px; letter-spacing: 0.2px; }
+    .sub { margin: 4px 0 14px; color: var(--muted); }
+    label { font-size: 12px; color: var(--muted); }
+    .form { display:grid; gap:14px; grid-template-columns: 1fr; }
+    @media (min-width: 880px) { .form { grid-template-columns: 1fr 1fr 1fr; } }
+    .field { display:flex; flex-direction:column; gap:6px; }
+    select, input[type=text] { appearance: none; -webkit-appearance:none; -moz-appearance:none; width: 100%; padding: 10px 12px; border-radius: 10px; border: 1px solid var(--border); background: #fafcff; color: var(--fg); font-size: 14px; box-shadow: inset 0 0 0 1px rgba(40,101,141,0.05); }
+    .row-aux { display:flex; align-items:center; justify-content:space-between; gap:12px; margin-top: 6px; }
+    .count { font-size: 12px; color: var(--muted); }
+    .cta { display:flex; gap:10px; flex-wrap: wrap; }
     .btn { padding: 10px 14px; border-radius: 10px; border: 1px solid var(--border); background: linear-gradient(180deg, #ffffff, #f5f8ff); color: #0b1220; cursor: pointer; font-weight: 600; letter-spacing: .2px; }
-    .btn:disabled { opacity: .5; cursor: not-allowed; }
+    .btn.primary { background: linear-gradient(180deg, #2f82b3, #28658D); color: #fff; border-color: #28658D; }
+    .btn:disabled { opacity: .6; cursor: not-allowed; }
     .hint { font-size: 12px; color: var(--muted); margin-top: 6px; }
   </style>
 </head>
 <body>
   <main class="wrap">
-    <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
+    <div class="head">
       <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" srcset="assets/hfsrb-logo.png 1x, assets/hfsrb-logo@2x.png 2x" alt="HFSRB logo" onerror="this.onerror=null;this.src='assets/hfsrb-logo.svg';"> Explore Illinois Facility Survey</h1>
       <span style="font-size:12px;color:var(--muted)">v10</span>
     </div>
-    <div id="chips" class="chips"></div>
-      <span style="font-size:12px;color:var(--muted)">v10</span>
-    </div>
-    <div id="chips" class="chips"></div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
-    <div class="row">
-      <div class="step" style="min-width:260px">
+    <div id="chips" class="chips" style="margin-bottom:6px"></div>
+    <div class="form">
+      <div class="field">
         <label for="type">Facility Type</label>
         <select id="type">
           <option value="" disabled selected>Select a type…</option>
@@ -52,21 +53,23 @@
           <option>LTC</option>
         </select>
       </div>
-      <div class="step hidden" id="step-year" style="min-width:180px">
+      <div class="field" id="step-year">
         <label for="year">Year</label>
         <select id="year"></select>
       </div>
-      <div class="step hidden" id="step-fac" style="flex:1; min-width:320px">
+      <div class="field" id="step-fac">
         <label for="facility">Facility</label>
-        <input id="facFilter" type="text" placeholder="Type to filter facilities…" style="padding:10px 12px;border-radius:10px;border:1px solid var(--border);background:#fafcff;color:var(--fg);font-size:14px">
+        <input id="facFilter" type="text" placeholder="Type to filter facilities…">
         <select id="facility"></select>
-        <div class="hint" id="facCount"></div>
       </div>
     </div>
-    <div class="cta">
-      <button class="btn" id="openBtn" disabled>Open Profile</button>
-      <a class="btn" href="dashboard.html">Advanced Dashboard</a>
-      <a class="btn" href="query.html">Query Assistant</a>
+    <div class="row-aux">
+      <div class="count" id="facCount"></div>
+      <div class="cta">
+        <button class="btn primary" id="openBtn" disabled>Open Profile</button>
+        <a class="btn" href="dashboard.html">Advanced Dashboard</a>
+        <a class="btn" href="query.html">Query Assistant</a>
+      </div>
     </div>
   </main>
 
