--- a/web/welcome.html
+++ b/web/welcome.html
@@ -16,19 +16,19 @@
     * { box-sizing: border-box; }
     html, body { height: 100%; }
     body { margin:0; background: radial-gradient(900px 360px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); display:grid; place-items:center; }
-    .wrap { width: min(920px, 92vw); padding: 28px; border: 1px solid var(--border); border-radius: 16px; background: var(--card); box-shadow: 0 8px 24px rgba(16,24,40,0.08); }
+    .wrap { width: min(920px, 92vw); padding: 22px; border: 1px solid var(--border); border-radius: 14px; background: var(--card); box-shadow: 0 8px 24px rgba(16,24,40,0.08); }
     .head { display:flex; align-items:center; justify-content:center; gap:12px; margin-bottom: 8px; text-align:center; }
     h1 { margin: 0; font-size: 22px; letter-spacing: 0.2px; }
     .sub { margin: 4px 0 14px; color: var(--muted); }
     label { font-size: 12px; color: var(--muted); }
-    .form { display:grid; gap:14px; grid-template-columns: 1fr; }
+    .form { display:grid; gap:10px; grid-template-columns: 1fr; }
     @media (min-width: 880px) { .form { grid-template-columns: 1fr 1fr 1fr; } }
-    .field { display:flex; flex-direction:column; gap:6px; }
-    select, input[type=text] { appearance: none; -webkit-appearance:none; -moz-appearance:none; width: 100%; padding: 10px 12px; border-radius: 10px; border: 1px solid var(--border); background: #fafcff; color: var(--fg); font-size: 14px; box-shadow: inset 0 0 0 1px rgba(40,101,141,0.05); }
+    .field { display:flex; flex-direction:column; gap:5px; }
+    select, input[type=text] { appearance: none; -webkit-appearance:none; -moz-appearance:none; width: 100%; padding: 9px 12px; border-radius: 8px; border: 1px solid var(--border); background: #fafcff; color: var(--fg); font-size: 14px; box-shadow: inset 0 0 0 1px rgba(40,101,141,0.05); }
     .row-aux { display:flex; align-items:center; justify-content:space-between; gap:12px; margin-top: 6px; }
     .count { font-size: 12px; color: var(--muted); }
-    .cta { display:flex; gap:10px; flex-wrap: wrap; }
-    .btn { padding: 10px 14px; border-radius: 10px; border: 1px solid var(--border); background: linear-gradient(180deg, #ffffff, #f5f8ff); color: #0b1220; cursor: pointer; font-weight: 600; letter-spacing: .2px; }
+    .cta { display:flex; gap:8px; flex-wrap: wrap; }
+    .btn { padding: 9px 12px; border-radius: 8px; border: 1px solid var(--border); background: linear-gradient(180deg, #ffffff, #f5f8ff); color: #0b1220; cursor: pointer; font-weight: 600; letter-spacing: .2px; }
     .btn.primary { background: linear-gradient(180deg, #2f82b3, #28658D); color: #fff; border-color: #28658D; }
     .btn:disabled { opacity: .6; cursor: not-allowed; }
     .hint { font-size: 12px; color: var(--muted); margin-top: 6px; }
@@ -151,6 +151,7 @@
       state.all = await api.loadIndex();
       // Wire selects
       const tSel = el('#type'); const ySel = el('#year'); const fInp = el('#facFilter'); const fSel = el('#facility');
+      function updateDisabled(){ ySel.disabled = !state.choices.type; const dis = !state.choices.year; if(fInp) fInp.disabled = dis; if(fSel) fSel.disabled = dis; }
       tSel.addEventListener('change', (e)=>{ state.choices.type = e.target.value; setYears(); el('#openBtn').disabled = true; ySel.focus(); updateChips(); });
       ySel.addEventListener('change', (e)=>{ state.choices.year = e.target.value; setFacilities(); el('#openBtn').disabled = true; fInp.focus(); updateChips(); });
       fInp.addEventListener('input', (e)=>{ state.facFilter = e.target.value; setFacilities(); el('#openBtn').disabled = true; updateChips(); });
@@ -164,7 +165,7 @@
         if (!state.choices.slug) { fInp.focus(); return; }
         if (!el('#openBtn').disabled) openProfile();
       });
-      renderRecent();
+      updateDisabled(); renderRecent();
     })();
   </script>
 </body>
