Welcome UX pass: narrower 820px card, tighter paddings/gaps, chips moved below form with divider, primary button full-width on mobile, smaller logo

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -16,7 +16,7 @@
     * { box-sizing: border-box; }
     html, body { height: 100%; }
     body { margin:0; background: radial-gradient(900px 360px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); display:grid; place-items:center; }
-    .wrap { width: min(860px, 92vw); padding: 18px; border: 1px solid var(--border); border-radius: 12px; background: var(--card); box-shadow: 0 6px 20px rgba(16,24,40,0.08); }
+    .wrap { width: min(820px, 92vw); padding: 16px; border: 1px solid var(--border); border-radius: 12px; background: var(--card); box-shadow: 0 6px 20px rgba(16,24,40,0.08); }
     .head { display:flex; align-items:center; justify-content:center; gap:8px; margin-bottom: 8px; text-align:center; }
     h1 { margin: 0; font-size: 22px; letter-spacing: 0.2px; }
     .sub { margin: 4px 0 12px; color: var(--muted); }
@@ -40,7 +40,6 @@
       <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" srcset="assets/hfsrb-logo.png 1x, assets/hfsrb-logo@2x.png 2x" alt="HFSRB logo" onerror="this.onerror=null;this.src='assets/hfsrb-logo.svg';"> Explore Illinois Facility Survey <span class="version">v10</span></h1>
     </div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
-    <div id="chips" class="chips" style="margin-bottom:6px"></div>
     <div class="form">
       <div class="field">
         <label for="type">Facility Type</label>
@@ -62,6 +61,8 @@
         <select id="facility"></select>
       </div>
     </div>
+    <div class="rule"></div>
+    <div id="chips" class="chips" style="text-align:center"></div>
     <div class="row-aux">
       <div class="count" id="facCount"></div>
       <div class="cta">
