Remove webfont URLs to stop 404s; inline SVG logo in wizard and dashboard to guarantee render; push deploy

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -37,7 +37,10 @@
 <body>
   <main class="wrap">
     <div class="head">
-      <h1 class="brand"><img class="brand-logo" src="assets/hfsrb-logo.png" srcset="assets/hfsrb-logo.png 1x, assets/hfsrb-logo@2x.png 2x" alt="HFSRB logo" onerror="this.onerror=null;this.src='assets/hfsrb-logo.svg';"> Explore Illinois Facility Survey <span class="version">v10</span></h1>
+      <h1 class="brand">
+        <svg class="brand-logo" viewBox="0 0 96 96" width="24" height="24" aria-hidden="true"><defs><linearGradient id="g" x1="0" x2="1" y1="0" y2="1"><stop offset="0%" stop-color="#3a7aa3"/><stop offset="100%" stop-color="#28658D"/></linearGradient></defs><circle cx="48" cy="48" r="44" fill="url(#g)"/><circle cx="48" cy="48" r="38" fill="#fff"/></svg>
+        Explore Illinois Facility Survey <span class="version">v10</span>
+      </h1>
     </div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
     <div class="form">
