--- a/web/query.html
+++ b/web/query.html
@@ -29,20 +29,27 @@
       <input id="q" placeholder="Example: hospitals in Cook County in 2024 with icu beds > 10" />
       <button id="run" class="btn">Search</button>
     </div>
-    <div id="hint"><small>Supported: type (Hospital/ASTC/ESRD/LTC), county/city/ZIP, year, and metrics like “icu beds &gt; 10”, “stations &gt;= 20”, “rooms &lt; 5”, “visits 10000”.</small></div>
+    <div id="hint"><small>Ask for filters and columns, e.g. “hospitals in Cook County in 2024 with icu beds &gt; 10; show name, city, icu beds”.</small></div>
+    <div id="interp" class="card" style="display:none"></div>
     <div id="count" style="margin-top:8px;color:#5f6b7a"></div>
-    <div id="chips" style="margin-top:10px"></div>
     <div class="results" id="out"></div>
   </main>
   <script>
     const el = s => document.querySelector(s);
-    const chipsBox = () => el('#chips');
+    const FIELD_MAP = {
+      name:'name', city:'city', county:'county', zip:'zip', year:'year', type:'type',
+      'icu beds':'metrics.icu_beds','ms beds':'metrics.ms_beds','op visits':'metrics.op_visits_total',
+      'or rooms':'metrics.or_rooms_total','or cases':'metrics.or_cases_total','class c cases':'metrics.or_cases_class_c','class b cases':'metrics.or_cases_class_b',
+      'ed visits':'metrics.ed_visits','stations':'metrics.stations_setup','fte total':'metrics.fte_total','rooms exam':'metrics.rooms_exam',
+      'idd beds':'metrics.beds_licensed_idd','idd days':'metrics.days_total_idd',
+      'medicare':'metrics.pay_medicare','medicaid':'metrics.pay_medicaid','private insurance':'metrics.pay_private_ins','other public':'metrics.pay_other_public','private pay':'metrics.pay_private_pay'
+    };
     const types = ['Hospital','ASTC','ESRD','LTC'];
     const stop = new Set(['in','of','the','for','with','and','to','at','on']);
     const yearRe = /(20\d{2}|19\d{2})/g;
     const zipRe = /\b\d{5}\b/;
     function parseQuery(text){
-      const out = { type:'', year:'', county:'', city:'', zip:'', metrics:[] };
+      const out = { type:'', year:'', county:'', city:'', zip:'', metrics:[], columns:[] };
       const t = text.trim(); if (!t) return out;
       const y = t.match(yearRe); if (y) out.year = y.map(String).pop();
       const lower = t.toLowerCase();
@@ -61,21 +68,25 @@
       const mexp = /(icu|ms|beds|stations|rooms|visits)\s*(?:beds|stations|rooms|visits)?\s*(>=|<=|>|<|=)?\s*(\d+)/gi;
       let mm; const map = { icu:'icu_beds', ms:'ms_beds', beds:'ms_beds', stations:'stations_setup', rooms:'or_rooms_class_c', visits:'op_visits_total' };
       while ((mm = mexp.exec(t))){ const k = map[mm[1].toLowerCase()]; const op = mm[2]||'='; const val = Number(mm[3]); if (k && Number.isFinite(val)) out.metrics.push({k,op,val}); }
+      // columns
+      const mcols = /(show|list)\s+([a-z0-9 ,_]+)$/i.exec(t);
+      if (mcols){ out.columns = mcols[2].split(/[, ]+/).map(x=>x.trim().toLowerCase()).filter(Boolean); }
       return out;
     }
     async function loadIndex(){ const r = await fetch('data/index.json?v=2'); return await r.json(); }
-    function renderChips(p){
-      const box = chipsBox();
-      const parts = [];
-      function chip(label, key){ if (!p[key]) return; parts.push(`<span class=\"chip\" data-k=\"${key}\">${label}: ${p[key]} ×</span>`); }
+    function renderInterp(p){
+      const box = el('#interp'); if (!box) return;
+      const chips = [];
+      function chip(label, key){ if (!p[key]) return; chips.push(`<span class=\"chip\">${label}: ${p[key]}</span>`); }
       chip('Type','type'); chip('Year','year'); chip('County','county'); chip('City','city'); chip('ZIP','zip');
-      parts.push(`<button class=\"btn\" id=\"clearChips\">Clear</button>`);
-      box.innerHTML = parts.join(' ');
-      box.querySelectorAll('.chip').forEach(c => c.addEventListener('click', ()=>{ const k=c.getAttribute('data-k'); p[k]=''; runWith(p); }));
-      const clr = el('#clearChips'); if (clr) clr.addEventListener('click', ()=>{ el('#q').value=''; run(); });
+      if (p.metrics && p.metrics.length) chips.push(...p.metrics.map(c=>`<span class=\"chip\">${c.k} ${c.op} ${c.val}</span>`));
+      const cols = (p.columns||[]).map(c=>`<span class=\"chip\">${c}</span>`).join(' ');
+      box.innerHTML = `<div><small>Filters:</small> ${chips.join(' ')||'<em>none</em>'}</div>` + (cols? `<div style=\"margin-top:6px\"><small>Columns:</small> ${cols}</div>`:'') + `<div style=\"margin-top:6px\"><button class=\"btn\" id=\"clearAll\">Clear</button></div>`;
+      box.style.display='block';
+      const clr = el('#clearAll'); if (clr) clr.addEventListener('click', ()=>{ el('#q').value=''; run(); });
     }
     function runWith(p){
-      renderChips(p);
+      renderInterp(p);
       const all = window.__ALL__ || [];
       let rows = all.slice();
       if (p.type) rows = rows.filter(r => r.type===p.type);
@@ -96,7 +107,20 @@
           });
         });
       }
-      el('#out').innerHTML = rows.length ? rows.slice(0,200).map(fmtRow).join('') : '<div class=\"card\">No matches found.</div>';
+      // projection
+      const cols = (p.columns && p.columns.length) ? p.columns : ['name','city','year'];
+      const resolved = cols.map(c => ({ key:c, path:FIELD_MAP[c]||c }));
+      const header = `<tr>${resolved.map(r=>`<th style=\"text-align:left;border-bottom:1px solid #e5eaf1;padding:6px\">${r.key.toUpperCase()}</th>`).join('')}</tr>`;
+      function get(obj, path){ const parts=String(path||'').split('.'); let cur=obj; for(const pr of parts){ if(!cur) return ''; cur = cur[pr]; } return cur==null?'':cur; }
+      const body = rows.slice(0,200).map(r=>`<tr>${resolved.map(c=>`<td style=\"padding:6px;border-bottom:1px solid #f0f2f6\">${get(r, c.path)}</td>`).join('')}</tr>`).join('');
+      const table = `<div class=\"card\"><div style=\"display:flex;justify-content:space-between;align-items:center\"><strong>${rows.length} matches</strong><button id=\"dlCsv\" class=\"btn\">Download CSV</button></div><table style=\"width:100%;border-collapse:collapse;margin-top:6px\">${header}${body}</table></div>`;
+      el('#out').innerHTML = rows.length ? table : '<div class=\"card\">No matches found.</div>';
+      const btn = el('#dlCsv'); if (btn) btn.addEventListener('click', ()=>{
+        const csv = [cols.map(h=>`"${h.replace(/"/g,'""')}"`).join(',')]
+          .concat(rows.map(r=> cols.map(c=>`"${String(get(r, FIELD_MAP[c]||c)??'').replace(/"/g,'""')}"`).join(',')))
+          .join('\n');
+        const blob = new Blob([csv], {type:'text/csv'}); const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='query-results.csv'; document.body.appendChild(a); a.click(); a.remove();
+      });
     }
     function fmtRow(r){
       const link = `./out/profiles/${r.year}/${r.type}/${r.slug}.html`;
