--- a/web/welcome.html
+++ b/web/welcome.html
@@ -15,7 +15,7 @@
     :root { --bg:#f7f9fc; --card:#ffffff; --fg:#0b1220; --muted:#5f6b7a; --accent:#28658D; --border:#e5eaf1; }
     * { box-sizing: border-box; }
     html, body { height: 100%; }
-    body { margin:0; background: radial-gradient(900px 360px at 50% -20%, #eef3ff 0%, transparent 60%), linear-gradient(180deg,#f9fbff, #f4f7fb); color: var(--fg); display:grid; place-items:center; }
+    body { margin:0; background: #ffffff; color: var(--fg); display:grid; place-items:center; }
     .wrap { width: min(820px, 92vw); padding: 16px; border: 1px solid var(--border); border-radius: 12px; background: var(--card); box-shadow: 0 6px 20px rgba(16,24,40,0.08); }
     .head { display:flex; align-items:center; justify-content:center; gap:8px; margin-bottom: 8px; text-align:center; }
     h1 { margin: 0; font-size: 22px; letter-spacing: 0.2px; }
@@ -36,10 +36,10 @@
 </head>
 <body>
   <main class="wrap">
-    <div class="head">
+    <div class="head" style="justify-content:flex-start">
       <h1 class="brand">
         <svg class="brand-logo" viewBox="0 0 96 96" width="24" height="24" aria-hidden="true"><defs><linearGradient id="g" x1="0" x2="1" y1="0" y2="1"><stop offset="0%" stop-color="#3a7aa3"/><stop offset="100%" stop-color="#28658D"/></linearGradient></defs><circle cx="48" cy="48" r="44" fill="url(#g)"/><circle cx="48" cy="48" r="38" fill="#fff"/></svg>
-        Explore Illinois Facility Survey <span class="version">v10</span>
+        Explore Illinois Facility Survey
       </h1>
     </div>
     <p class="sub">Pick a facility type and year, then jump right into a full profile.</p>
@@ -70,10 +70,11 @@
       <div class="count" id="facCount"></div>
       <div class="cta">
         <button class="btn primary" id="openBtn" disabled>Open Profile</button>
-        <a class="btn" href="dashboard.html">Advanced Dashboard</a>
-        <a class="btn" href="query.html">Query Assistant</a>
+        <a class="btn link" href="dashboard.html">Advanced dashboard</a>
+        <a class="btn link" href="query.html">Query assistant</a>
       </div>
     </div>
+    <div style="margin-top:8px; text-align:right; color:#5f6b7a; font-size:12px">v10</div>
   </main>
 
   <script>
